parser/lang_stride.parser.output
Grammar

    0 $accept: entry $end

    1 entry: /* empty */
    2      | entry start
    3      | entry SEMICOLON

    4 start: platformDef
    5      | importDef
    6      | forDef
    7      | blockDef
    8      | streamDef
    9      | ERROR

   10 platformDef: languagePlatform targetPlatform
   11            | languagePlatform targetPlatform WITH auxPlatformDef

   12 languagePlatform: USE UVAR
   13                 | USE UVAR VERSION FLOAT

   14 targetPlatform: ON UVAR
   15               | ON UVAR VERSION FLOAT

   16 auxPlatformDef: UVAR
   17               | auxPlatformDef AND UVAR

   18 importDef: IMPORT WORD
   19          | IMPORT WORD AS WORD
   20          | IMPORT UVAR AS WORD

   21 forDef: FOR forPlatformDef

   22 forPlatformDef: UVAR
   23               | forPlatformDef AND UVAR

   24 blockDef: WORD UVAR blockType
   25         | WORD UVAR '[' indexExp ']' blockType

   26 blockType: '{' '}'
   27          | '{' properties '}'

   28 streamDef: valueExp STREAM streamExp SEMICOLON
   29          | valueListExp STREAM streamExp SEMICOLON

   30 bundleDef: UVAR '[' indexList ']'
   31          | WORD DOT UVAR '[' indexList ']'

   32 functionDef: UVAR '(' ')'
   33            | UVAR '(' properties ')'
   34            | WORD DOT UVAR '(' ')'
   35            | WORD DOT UVAR '(' properties ')'

   36 properties: properties property SEMICOLON
   37           | properties property
   38           | property SEMICOLON
   39           | property

   40 property: WORD COLON propertyType

   41 propertyType: NONE
   42             | valueExp
   43             | blockType
   44             | listDef
   45             | valueListExp

   46 valueListDef: '[' valueList ']'
   47             | '[' valueListList ']'

   48 valueList: valueList COMMA valueExp
   49          | valueExp

   50 valueListList: valueListList COMMA valueListDef
   51              | valueListDef

   52 listDef: '[' blockList ']'
   53        | '[' streamList ']'
   54        | '[' listList ']'

   55 blockList: blockList COMMA blockDef
   56          | blockDef

   57 streamList: streamList COMMA streamDef
   58           | streamDef

   59 listList: listList COMMA listDef
   60         | listDef

   61 indexList: indexList COMMA indexExp
   62          | indexList COMMA indexRange
   63          | indexExp
   64          | indexRange

   65 indexRange: indexExp COLON indexExp

   66 indexExp: indexExp '+' indexExp
   67         | indexExp '-' indexExp
   68         | indexExp '*' indexExp
   69         | indexExp '/' indexExp
   70         | '(' indexExp ')'
   71         | indexComp

   72 valueListExp: valueListDef '+' valueExp
   73             | valueListDef '-' valueExp
   74             | valueListDef '*' valueExp
   75             | valueListDef '/' valueExp
   76             | valueListDef AND valueExp
   77             | valueListDef OR valueExp
   78             | valueExp '+' valueListDef
   79             | valueExp '-' valueListDef
   80             | valueExp '*' valueListDef
   81             | valueExp '/' valueListDef
   82             | valueExp AND valueListDef
   83             | valueExp OR valueListDef
   84             | valueListDef '+' valueListDef
   85             | valueListDef '-' valueListDef
   86             | valueListDef '*' valueListDef
   87             | valueListDef '/' valueListDef
   88             | valueListDef AND valueListDef
   89             | valueListDef OR valueListDef
   90             | valueListDef

   91 valueExp: valueExp '+' valueExp
   92         | valueExp '-' valueExp
   93         | valueExp '*' valueExp
   94         | valueExp '/' valueExp
   95         | valueExp AND valueExp
   96         | valueExp OR valueExp
   97         | '(' valueExp ')'
   98         | '-' valueExp
   99         | NOT valueExp
  100         | valueComp

  101 streamExp: streamComp STREAM streamExp
  102          | streamComp

  103 indexComp: INT
  104          | UVAR
  105          | WORD DOT UVAR
  106          | bundleDef

  107 streamComp: UVAR
  108           | WORD DOT UVAR
  109           | bundleDef
  110           | functionDef
  111           | valueListDef

  112 valueComp: INT
  113          | FLOAT
  114          | ON
  115          | OFF
  116          | STRING
  117          | STREAMRATE
  118          | UVAR
  119          | WORD DOT UVAR
  120          | bundleDef
  121          | functionDef


Terminals, with rules where they appear

$end (0) 0
'(' (40) 32 33 34 35 70 97
')' (41) 32 33 34 35 70 97
'*' (42) 68 74 80 86 93
'+' (43) 66 72 78 84 91
'-' (45) 67 73 79 85 92 98
'/' (47) 69 75 81 87 94
'[' (91) 25 30 31 46 47 52 53 54
']' (93) 25 30 31 46 47 52 53 54
'{' (123) 26 27
'}' (125) 26 27
error (256)
INT (258) 103 112
FLOAT (259) 13 15 113
UVAR (260) 12 13 14 15 16 17 20 22 23 24 25 30 31 32 33 34 35 104 105
    107 108 118 119
WORD (261) 18 19 20 24 25 31 34 35 40 105 108 119
STRING (262) 116
ERROR (263) 9
COMMA (264) 48 50 55 57 59 61 62
COLON (265) 40 65
SEMICOLON (266) 3 28 29 36 38
USE (267) 12 13
VERSION (268) 13 15
WITH (269) 11
IMPORT (270) 18 19 20
AS (271) 19 20
FOR (272) 21
NONE (273) 41
ON (274) 14 15 114
OFF (275) 115
STREAMRATE (276) 117
STREAM (277) 28 29 101
OR (278) 77 83 89 96
AND (279) 17 23 76 82 88 95
NOT (280) 99
UMINUS (281)
DOT (282) 31 34 35 105 108 119


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
entry (39)
    on left: 1 2 3, on right: 0 2 3
start (40)
    on left: 4 5 6 7 8 9, on right: 2
platformDef (41)
    on left: 10 11, on right: 4
languagePlatform (42)
    on left: 12 13, on right: 10 11
targetPlatform (43)
    on left: 14 15, on right: 10 11
auxPlatformDef (44)
    on left: 16 17, on right: 11 17
importDef (45)
    on left: 18 19 20, on right: 5
forDef (46)
    on left: 21, on right: 6
forPlatformDef (47)
    on left: 22 23, on right: 21 23
blockDef (48)
    on left: 24 25, on right: 7 55 56
blockType (49)
    on left: 26 27, on right: 24 25 43
streamDef (50)
    on left: 28 29, on right: 8 57 58
bundleDef (51)
    on left: 30 31, on right: 106 109 120
functionDef (52)
    on left: 32 33 34 35, on right: 110 121
properties (53)
    on left: 36 37 38 39, on right: 27 33 35 36 37
property (54)
    on left: 40, on right: 36 37 38 39
propertyType (55)
    on left: 41 42 43 44 45, on right: 40
valueListDef (56)
    on left: 46 47, on right: 50 51 72 73 74 75 76 77 78 79 80 81 82
    83 84 85 86 87 88 89 90 111
valueList (57)
    on left: 48 49, on right: 46 48
valueListList (58)
    on left: 50 51, on right: 47 50
listDef (59)
    on left: 52 53 54, on right: 44 59 60
blockList (60)
    on left: 55 56, on right: 52 55
streamList (61)
    on left: 57 58, on right: 53 57
listList (62)
    on left: 59 60, on right: 54 59
indexList (63)
    on left: 61 62 63 64, on right: 30 31 61 62
indexRange (64)
    on left: 65, on right: 62 64
indexExp (65)
    on left: 66 67 68 69 70 71, on right: 25 61 63 65 66 67 68 69 70
valueListExp (66)
    on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
    90, on right: 29 45
valueExp (67)
    on left: 91 92 93 94 95 96 97 98 99 100, on right: 28 42 48 49
    72 73 74 75 76 77 78 79 80 81 82 83 91 92 93 94 95 96 97 98 99
streamExp (68)
    on left: 101 102, on right: 28 29 101
indexComp (69)
    on left: 103 104 105 106, on right: 71
streamComp (70)
    on left: 107 108 109 110 111, on right: 101 102
valueComp (71)
    on left: 112 113 114 115 116 117 118 119 120 121, on right: 100


state 0

    0 $accept: . entry $end

    $default  reduce using rule 1 (entry)

    entry  go to state 1


state 1

    0 $accept: entry . $end
    2 entry: entry . start
    3      | entry . SEMICOLON

    $end        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 6
    STRING      shift, and go to state 7
    ERROR       shift, and go to state 8
    '['         shift, and go to state 9
    SEMICOLON   shift, and go to state 10
    USE         shift, and go to state 11
    IMPORT      shift, and go to state 12
    FOR         shift, and go to state 13
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    start             go to state 20
    platformDef       go to state 21
    languagePlatform  go to state 22
    importDef         go to state 23
    forDef            go to state 24
    blockDef          go to state 25
    streamDef         go to state 26
    bundleDef         go to state 27
    functionDef       go to state 28
    valueListDef      go to state 29
    valueListExp      go to state 30
    valueExp          go to state 31
    valueComp         go to state 32


state 2

    0 $accept: entry $end .

    $default  accept


state 3

  112 valueComp: INT .

    $default  reduce using rule 112 (valueComp)


state 4

  113 valueComp: FLOAT .

    $default  reduce using rule 113 (valueComp)


state 5

   30 bundleDef: UVAR . '[' indexList ']'
   32 functionDef: UVAR . '(' ')'
   33            | UVAR . '(' properties ')'
  118 valueComp: UVAR .

    '['  shift, and go to state 33
    '('  shift, and go to state 34

    $default  reduce using rule 118 (valueComp)


state 6

   24 blockDef: WORD . UVAR blockType
   25         | WORD . UVAR '[' indexExp ']' blockType
   31 bundleDef: WORD . DOT UVAR '[' indexList ']'
   34 functionDef: WORD . DOT UVAR '(' ')'
   35            | WORD . DOT UVAR '(' properties ')'
  119 valueComp: WORD . DOT UVAR

    UVAR  shift, and go to state 35
    DOT   shift, and go to state 36


state 7

  116 valueComp: STRING .

    $default  reduce using rule 116 (valueComp)


state 8

    9 start: ERROR .

    $default  reduce using rule 9 (start)


state 9

   46 valueListDef: '[' . valueList ']'
   47             | '[' . valueListList ']'

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef      go to state 27
    functionDef    go to state 28
    valueListDef   go to state 38
    valueList      go to state 39
    valueListList  go to state 40
    valueExp       go to state 41
    valueComp      go to state 32


state 10

    3 entry: entry SEMICOLON .

    $default  reduce using rule 3 (entry)


state 11

   12 languagePlatform: USE . UVAR
   13                 | USE . UVAR VERSION FLOAT

    UVAR  shift, and go to state 42


state 12

   18 importDef: IMPORT . WORD
   19          | IMPORT . WORD AS WORD
   20          | IMPORT . UVAR AS WORD

    UVAR  shift, and go to state 43
    WORD  shift, and go to state 44


state 13

   21 forDef: FOR . forPlatformDef

    UVAR  shift, and go to state 45

    forPlatformDef  go to state 46


state 14

  114 valueComp: ON .

    $default  reduce using rule 114 (valueComp)


state 15

  115 valueComp: OFF .

    $default  reduce using rule 115 (valueComp)


state 16

  117 valueComp: STREAMRATE .

    $default  reduce using rule 117 (valueComp)


state 17

   98 valueExp: '-' . valueExp

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef    go to state 27
    functionDef  go to state 28
    valueExp     go to state 47
    valueComp    go to state 32


state 18

   99 valueExp: NOT . valueExp

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef    go to state 27
    functionDef  go to state 28
    valueExp     go to state 48
    valueComp    go to state 32


state 19

   97 valueExp: '(' . valueExp ')'

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef    go to state 27
    functionDef  go to state 28
    valueExp     go to state 49
    valueComp    go to state 32


state 20

    2 entry: entry start .

    $default  reduce using rule 2 (entry)


state 21

    4 start: platformDef .

    $default  reduce using rule 4 (start)


state 22

   10 platformDef: languagePlatform . targetPlatform
   11            | languagePlatform . targetPlatform WITH auxPlatformDef

    ON  shift, and go to state 50

    targetPlatform  go to state 51


state 23

    5 start: importDef .

    $default  reduce using rule 5 (start)


state 24

    6 start: forDef .

    $default  reduce using rule 6 (start)


state 25

    7 start: blockDef .

    $default  reduce using rule 7 (start)


state 26

    8 start: streamDef .

    $default  reduce using rule 8 (start)


state 27

  120 valueComp: bundleDef .

    $default  reduce using rule 120 (valueComp)


state 28

  121 valueComp: functionDef .

    $default  reduce using rule 121 (valueComp)


state 29

   72 valueListExp: valueListDef . '+' valueExp
   73             | valueListDef . '-' valueExp
   74             | valueListDef . '*' valueExp
   75             | valueListDef . '/' valueExp
   76             | valueListDef . AND valueExp
   77             | valueListDef . OR valueExp
   84             | valueListDef . '+' valueListDef
   85             | valueListDef . '-' valueListDef
   86             | valueListDef . '*' valueListDef
   87             | valueListDef . '/' valueListDef
   88             | valueListDef . AND valueListDef
   89             | valueListDef . OR valueListDef
   90             | valueListDef .

    OR   shift, and go to state 52
    AND  shift, and go to state 53
    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 90 (valueListExp)


state 30

   29 streamDef: valueListExp . STREAM streamExp SEMICOLON

    STREAM  shift, and go to state 58


state 31

   28 streamDef: valueExp . STREAM streamExp SEMICOLON
   78 valueListExp: valueExp . '+' valueListDef
   79             | valueExp . '-' valueListDef
   80             | valueExp . '*' valueListDef
   81             | valueExp . '/' valueListDef
   82             | valueExp . AND valueListDef
   83             | valueExp . OR valueListDef
   91 valueExp: valueExp . '+' valueExp
   92         | valueExp . '-' valueExp
   93         | valueExp . '*' valueExp
   94         | valueExp . '/' valueExp
   95         | valueExp . AND valueExp
   96         | valueExp . OR valueExp

    STREAM  shift, and go to state 59
    OR      shift, and go to state 60
    AND     shift, and go to state 61
    '+'     shift, and go to state 62
    '-'     shift, and go to state 63
    '*'     shift, and go to state 64
    '/'     shift, and go to state 65


state 32

  100 valueExp: valueComp .

    $default  reduce using rule 100 (valueExp)


state 33

   30 bundleDef: UVAR '[' . indexList ']'

    INT   shift, and go to state 66
    UVAR  shift, and go to state 67
    WORD  shift, and go to state 68
    '('   shift, and go to state 69

    bundleDef   go to state 70
    indexList   go to state 71
    indexRange  go to state 72
    indexExp    go to state 73
    indexComp   go to state 74


state 34

   32 functionDef: UVAR '(' . ')'
   33            | UVAR '(' . properties ')'

    WORD  shift, and go to state 75
    ')'   shift, and go to state 76

    properties  go to state 77
    property    go to state 78


state 35

   24 blockDef: WORD UVAR . blockType
   25         | WORD UVAR . '[' indexExp ']' blockType

    '['  shift, and go to state 79
    '{'  shift, and go to state 80

    blockType  go to state 81


state 36

   31 bundleDef: WORD DOT . UVAR '[' indexList ']'
   34 functionDef: WORD DOT . UVAR '(' ')'
   35            | WORD DOT . UVAR '(' properties ')'
  119 valueComp: WORD DOT . UVAR

    UVAR  shift, and go to state 82


state 37

   31 bundleDef: WORD . DOT UVAR '[' indexList ']'
   34 functionDef: WORD . DOT UVAR '(' ')'
   35            | WORD . DOT UVAR '(' properties ')'
  119 valueComp: WORD . DOT UVAR

    DOT  shift, and go to state 36


state 38

   51 valueListList: valueListDef .

    $default  reduce using rule 51 (valueListList)


state 39

   46 valueListDef: '[' valueList . ']'
   48 valueList: valueList . COMMA valueExp

    ']'    shift, and go to state 83
    COMMA  shift, and go to state 84


state 40

   47 valueListDef: '[' valueListList . ']'
   50 valueListList: valueListList . COMMA valueListDef

    ']'    shift, and go to state 85
    COMMA  shift, and go to state 86


state 41

   49 valueList: valueExp .
   91 valueExp: valueExp . '+' valueExp
   92         | valueExp . '-' valueExp
   93         | valueExp . '*' valueExp
   94         | valueExp . '/' valueExp
   95         | valueExp . AND valueExp
   96         | valueExp . OR valueExp

    OR   shift, and go to state 87
    AND  shift, and go to state 88
    '+'  shift, and go to state 89
    '-'  shift, and go to state 90
    '*'  shift, and go to state 91
    '/'  shift, and go to state 92

    $default  reduce using rule 49 (valueList)


state 42

   12 languagePlatform: USE UVAR .
   13                 | USE UVAR . VERSION FLOAT

    VERSION  shift, and go to state 93

    $default  reduce using rule 12 (languagePlatform)


state 43

   20 importDef: IMPORT UVAR . AS WORD

    AS  shift, and go to state 94


state 44

   18 importDef: IMPORT WORD .
   19          | IMPORT WORD . AS WORD

    AS  shift, and go to state 95

    $default  reduce using rule 18 (importDef)


state 45

   22 forPlatformDef: UVAR .

    $default  reduce using rule 22 (forPlatformDef)


state 46

   21 forDef: FOR forPlatformDef .
   23 forPlatformDef: forPlatformDef . AND UVAR

    AND  shift, and go to state 96

    $default  reduce using rule 21 (forDef)


state 47

   91 valueExp: valueExp . '+' valueExp
   92         | valueExp . '-' valueExp
   93         | valueExp . '*' valueExp
   94         | valueExp . '/' valueExp
   95         | valueExp . AND valueExp
   96         | valueExp . OR valueExp
   98         | '-' valueExp .

    $default  reduce using rule 98 (valueExp)


state 48

   91 valueExp: valueExp . '+' valueExp
   92         | valueExp . '-' valueExp
   93         | valueExp . '*' valueExp
   94         | valueExp . '/' valueExp
   95         | valueExp . AND valueExp
   96         | valueExp . OR valueExp
   99         | NOT valueExp .

    $default  reduce using rule 99 (valueExp)


state 49

   91 valueExp: valueExp . '+' valueExp
   92         | valueExp . '-' valueExp
   93         | valueExp . '*' valueExp
   94         | valueExp . '/' valueExp
   95         | valueExp . AND valueExp
   96         | valueExp . OR valueExp
   97         | '(' valueExp . ')'

    OR   shift, and go to state 87
    AND  shift, and go to state 88
    '+'  shift, and go to state 89
    '-'  shift, and go to state 90
    '*'  shift, and go to state 91
    '/'  shift, and go to state 92
    ')'  shift, and go to state 97


state 50

   14 targetPlatform: ON . UVAR
   15               | ON . UVAR VERSION FLOAT

    UVAR  shift, and go to state 98


state 51

   10 platformDef: languagePlatform targetPlatform .
   11            | languagePlatform targetPlatform . WITH auxPlatformDef

    WITH  shift, and go to state 99

    $default  reduce using rule 10 (platformDef)


state 52

   77 valueListExp: valueListDef OR . valueExp
   89             | valueListDef OR . valueListDef

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 100
    valueExp      go to state 101
    valueComp     go to state 32


state 53

   76 valueListExp: valueListDef AND . valueExp
   88             | valueListDef AND . valueListDef

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 102
    valueExp      go to state 103
    valueComp     go to state 32


state 54

   72 valueListExp: valueListDef '+' . valueExp
   84             | valueListDef '+' . valueListDef

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 104
    valueExp      go to state 105
    valueComp     go to state 32


state 55

   73 valueListExp: valueListDef '-' . valueExp
   85             | valueListDef '-' . valueListDef

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 106
    valueExp      go to state 107
    valueComp     go to state 32


state 56

   74 valueListExp: valueListDef '*' . valueExp
   86             | valueListDef '*' . valueListDef

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 108
    valueExp      go to state 109
    valueComp     go to state 32


state 57

   75 valueListExp: valueListDef '/' . valueExp
   87             | valueListDef '/' . valueListDef

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 110
    valueExp      go to state 111
    valueComp     go to state 32


state 58

   29 streamDef: valueListExp STREAM . streamExp SEMICOLON

    UVAR  shift, and go to state 112
    WORD  shift, and go to state 113
    '['   shift, and go to state 9

    bundleDef     go to state 114
    functionDef   go to state 115
    valueListDef  go to state 116
    streamExp     go to state 117
    streamComp    go to state 118


state 59

   28 streamDef: valueExp STREAM . streamExp SEMICOLON

    UVAR  shift, and go to state 112
    WORD  shift, and go to state 113
    '['   shift, and go to state 9

    bundleDef     go to state 114
    functionDef   go to state 115
    valueListDef  go to state 116
    streamExp     go to state 119
    streamComp    go to state 118


state 60

   83 valueListExp: valueExp OR . valueListDef
   96 valueExp: valueExp OR . valueExp

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 120
    valueExp      go to state 121
    valueComp     go to state 32


state 61

   82 valueListExp: valueExp AND . valueListDef
   95 valueExp: valueExp AND . valueExp

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 122
    valueExp      go to state 123
    valueComp     go to state 32


state 62

   78 valueListExp: valueExp '+' . valueListDef
   91 valueExp: valueExp '+' . valueExp

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 124
    valueExp      go to state 125
    valueComp     go to state 32


state 63

   79 valueListExp: valueExp '-' . valueListDef
   92 valueExp: valueExp '-' . valueExp

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 126
    valueExp      go to state 127
    valueComp     go to state 32


state 64

   80 valueListExp: valueExp '*' . valueListDef
   93 valueExp: valueExp '*' . valueExp

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 128
    valueExp      go to state 129
    valueComp     go to state 32


state 65

   81 valueListExp: valueExp '/' . valueListDef
   94 valueExp: valueExp '/' . valueExp

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    '['         shift, and go to state 9
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef     go to state 27
    functionDef   go to state 28
    valueListDef  go to state 130
    valueExp      go to state 131
    valueComp     go to state 32


state 66

  103 indexComp: INT .

    $default  reduce using rule 103 (indexComp)


state 67

   30 bundleDef: UVAR . '[' indexList ']'
  104 indexComp: UVAR .

    '['  shift, and go to state 33

    $default  reduce using rule 104 (indexComp)


state 68

   31 bundleDef: WORD . DOT UVAR '[' indexList ']'
  105 indexComp: WORD . DOT UVAR

    DOT  shift, and go to state 132


state 69

   70 indexExp: '(' . indexExp ')'

    INT   shift, and go to state 66
    UVAR  shift, and go to state 67
    WORD  shift, and go to state 68
    '('   shift, and go to state 69

    bundleDef  go to state 70
    indexExp   go to state 133
    indexComp  go to state 74


state 70

  106 indexComp: bundleDef .

    $default  reduce using rule 106 (indexComp)


state 71

   30 bundleDef: UVAR '[' indexList . ']'
   61 indexList: indexList . COMMA indexExp
   62          | indexList . COMMA indexRange

    ']'    shift, and go to state 134
    COMMA  shift, and go to state 135


state 72

   64 indexList: indexRange .

    $default  reduce using rule 64 (indexList)


state 73

   63 indexList: indexExp .
   65 indexRange: indexExp . COLON indexExp
   66 indexExp: indexExp . '+' indexExp
   67         | indexExp . '-' indexExp
   68         | indexExp . '*' indexExp
   69         | indexExp . '/' indexExp

    COLON  shift, and go to state 136
    '+'    shift, and go to state 137
    '-'    shift, and go to state 138
    '*'    shift, and go to state 139
    '/'    shift, and go to state 140

    $default  reduce using rule 63 (indexList)


state 74

   71 indexExp: indexComp .

    $default  reduce using rule 71 (indexExp)


state 75

   40 property: WORD . COLON propertyType

    COLON  shift, and go to state 141


state 76

   32 functionDef: UVAR '(' ')' .

    $default  reduce using rule 32 (functionDef)


state 77

   33 functionDef: UVAR '(' properties . ')'
   36 properties: properties . property SEMICOLON
   37           | properties . property

    WORD  shift, and go to state 75
    ')'   shift, and go to state 142

    property  go to state 143


state 78

   38 properties: property . SEMICOLON
   39           | property .

    SEMICOLON  shift, and go to state 144

    $default  reduce using rule 39 (properties)


state 79

   25 blockDef: WORD UVAR '[' . indexExp ']' blockType

    INT   shift, and go to state 66
    UVAR  shift, and go to state 67
    WORD  shift, and go to state 68
    '('   shift, and go to state 69

    bundleDef  go to state 70
    indexExp   go to state 145
    indexComp  go to state 74


state 80

   26 blockType: '{' . '}'
   27          | '{' . properties '}'

    WORD  shift, and go to state 75
    '}'   shift, and go to state 146

    properties  go to state 147
    property    go to state 78


state 81

   24 blockDef: WORD UVAR blockType .

    $default  reduce using rule 24 (blockDef)


state 82

   31 bundleDef: WORD DOT UVAR . '[' indexList ']'
   34 functionDef: WORD DOT UVAR . '(' ')'
   35            | WORD DOT UVAR . '(' properties ')'
  119 valueComp: WORD DOT UVAR .

    '['  shift, and go to state 148
    '('  shift, and go to state 149

    $default  reduce using rule 119 (valueComp)


state 83

   46 valueListDef: '[' valueList ']' .

    $default  reduce using rule 46 (valueListDef)


state 84

   48 valueList: valueList COMMA . valueExp

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    UVAR        shift, and go to state 5
    WORD        shift, and go to state 37
    STRING      shift, and go to state 7
    ON          shift, and go to state 14
    OFF         shift, and go to state 15
    STREAMRATE  shift, and go to state 16
    '-'         shift, and go to state 17
    NOT         shift, and go to state 18
    '('         shift, and go to state 19

    bundleDef    go to state 27
    functionDef  go to state 28
    valueExp     go to state 150
    valueComp    go to state 32


state 85

   47 valueListDef: '[' valueListList ']' .

    $default  reduce using rule 47 (valueListDef)


state 86

   50 valueListList: valueListList COMMA . valueListDef

    '['  shift, and go to state 9

    valueListDef  go to state 151


state 87

   96 valueExp: valueExp OR . valueExp
